--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ basepython =
     py37: {env:TOXPYTHON:python3.7}
     py38: {env:TOXPYTHON:python3.8}
     py39: {env:TOXPYTHON:python3.9}
-    {bootstrap,clean,check,report,docs,codecov}: {env:TOXPYTHON:python3.9}
+    {bootstrap,clean,check,report,docs,codecov}: {env:TOXPYTHON:pypy3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
