--- a/tox.ini
+++ b/tox.ini
@@ -11,20 +11,22 @@ passenv =
 
 [tox]
 envlist =
-    clean,
-    check,
-    docs,
-    {py36,py37,py38,py39},
-    report
+    ; clean,
+    ; check,
+    ; docs,
+    ; {py36,py37,py38,py39},
+    py39,
+    ; report,
+    ; codecov
 ignore_basepython_conflict = true
 
 [testenv]
 basepython =
-    py36: {env:TOXPYTHON:python3.6}
-    py37: {env:TOXPYTHON:python3.7}
-    py38: {env:TOXPYTHON:python3.8}
+    ; py36: {env:TOXPYTHON:python3.6}
+    ; py37: {env:TOXPYTHON:python3.7}
+    ; py38: {env:TOXPYTHON:python3.8}
     py39: {env:TOXPYTHON:python3.9}
-    {bootstrap,clean,check,report,docs,codecov}: {env:TOXPYTHON:python3.9}
+    ; {clean,check,report,docs,codecov}: {env:TOXPYTHON:python3.9}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -38,42 +40,42 @@ deps =
 commands =
     {posargs:pytest --cov --cov-report=term-missing -vv tests}
 
-[testenv:check]
-deps =
-    docutils
-    check-manifest
-    flake8
-    readme-renderer
-    pygments
-    isort
-commands =
-    python setup.py check --strict --metadata --restructuredtext
-    check-manifest {toxinidir}
-    flake8
-    isort --verbose --check-only --diff --filter-files .
+; [testenv:check]
+; deps =
+;     docutils
+;     check-manifest
+;     flake8
+;     readme-renderer
+;     pygments
+;     isort
+; commands =
+;     python setup.py check --strict --metadata --restructuredtext
+;     check-manifest {toxinidir}
+;     flake8
+;     isort --verbose --check-only --diff --filter-files .
 
-[testenv:docs]
-usedevelop = true
-deps =
-    -r{toxinidir}/docs/requirements.txt
-commands =
-    sphinx-build {posargs:-E} -b html docs dist/docs
-    sphinx-build -b linkcheck docs dist/docs
+; [testenv:docs]
+; usedevelop = true
+; deps =
+;     -r{toxinidir}/docs/requirements.txt
+; commands =
+;     sphinx-build {posargs:-E} -b html docs dist/docs
+;     sphinx-build -b linkcheck docs dist/docs
 
-[testenv:codecov]
-deps =
-    codecov
-commands =
-    codecov []
+; [testenv:codecov]
+; deps =
+;     codecov
+; commands =
+;     codecov []
 
-[testenv:report]
-deps =
-    coverage
-commands =
-    coverage report
-    coverage html
+; [testenv:report]
+; deps =
+;     coverage
+; commands =
+;     coverage report
+;     coverage html
 
-[testenv:clean]
-commands = coverage erase
-deps =
-    coverage
+; [testenv:clean]
+; commands = coverage erase
+; deps =
+;     coverage
