--- a/.travis.yml
+++ b/.travis.yml
@@ -9,28 +9,30 @@ env:
     - LANG=en_US.UTF-8
 matrix:
   include:
-    - python: '3.6'
-      env:
-        - TOXENV=check
-    - python: '3.6'
-      env:
-        - TOXENV=docs
-    - env:
-        - TOXENV=py36,codecov
-      python: '3.6'
-    - env:
-        - TOXENV=py37,codecov
-      python: '3.7'
-    - env:
-        - TOXENV=py38,codecov
-      python: '3.8'
-    - env:
-        - TOXENV=py39,codecov
-      python: '3.9'
-    - env:
-        - TOXENV=pypy3,codecov
-        - TOXPYTHON=pypy3
-      python: 'pypy3'
+    - python: "3.9"
+    - env: TOXENV=docs,checks,codecov,py39
+    # - python: '3.6'
+    #   env:
+    #     - TOXENV=check
+    # - python: '3.6'
+    #   env:
+    #     - TOXENV=docs
+    # - env:
+    #     - TOXENV=py36,codecov
+    #   python: '3.6'
+    # - env:
+    #     - TOXENV=py37,codecov
+    #   python: '3.7'
+    # - env:
+    #     - TOXENV=py38,codecov
+    #   python: '3.8'
+    # - env:
+    #     - TOXENV=py39,codecov
+    #   python: '3.9'
+    # - env:
+    #     - TOXENV=pypy3,codecov
+    #     - TOXPYTHON=pypy3
+    #   python: 'pypy3'
 before_install:
   - python --version
   - uname -a
@@ -48,4 +50,4 @@ after_failure:
 notifications:
   email:
     on_success: never
-    on_failure: always
+    on_failure: never
