--- a/tox.ini
+++ b/tox.ini
@@ -11,13 +11,13 @@ passenv =
 
 [tox]
 envlist =
-    ; clean,
-    ; check,
-    ; docs,
+    clean,
+    check,
+    docs,
     ; {py36,py37,py38,py39},
     py39,
-    ; report,
-    ; codecov
+    report,
+    codecov
 ignore_basepython_conflict = true
 
 [testenv]
@@ -26,7 +26,7 @@ basepython =
     ; py37: {env:TOXPYTHON:python3.7}
     ; py38: {env:TOXPYTHON:python3.8}
     py39: {env:TOXPYTHON:python3.9}
-    ; {clean,check,report,docs,codecov}: {env:TOXPYTHON:python3.9}
+    {clean,check,report,docs,codecov}: {env:TOXPYTHON:python3.9}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
