--- a/.travis.yml
+++ b/.travis.yml
@@ -9,30 +9,28 @@ env:
     - LANG=en_US.UTF-8
 matrix:
   include:
-    - python: "3.9"
-    - env: TOXENV=docs,check,codecov,py39
-    # - python: '3.6'
-    #   env:
-    #     - TOXENV=check
-    # - python: '3.6'
-    #   env:
-    #     - TOXENV=docs
-    # - env:
-    #     - TOXENV=py36,codecov
-    #   python: '3.6'
-    # - env:
-    #     - TOXENV=py37,codecov
-    #   python: '3.7'
-    # - env:
-    #     - TOXENV=py38,codecov
-    #   python: '3.8'
-    # - env:
-    #     - TOXENV=py39,codecov
-    #   python: '3.9'
-    # - env:
-    #     - TOXENV=pypy3,codecov
-    #     - TOXPYTHON=pypy3
-    #   python: 'pypy3'
+    - python: '3.6'
+      env:
+        - TOXENV=check
+    - python: '3.6'
+      env:
+        - TOXENV=docs
+    - env:
+        - TOXENV=py36,codecov
+      python: '3.6'
+    - env:
+        - TOXENV=py37,codecov
+      python: '3.7'
+    - env:
+        - TOXENV=py38,codecov
+      python: '3.8'
+    - env:
+        - TOXENV=py39,codecov
+      python: '3.9'
+    - env:
+        - TOXENV=pypy3,codecov
+        - TOXPYTHON=pypy3
+      python: 'pypy3'
 before_install:
   - python --version
   - uname -a
@@ -50,4 +48,4 @@ after_failure:
 notifications:
   email:
     on_success: never
-    on_failure: never
+    on_failure: always
